--- a/core/package.json
+++ b/core/package.json
@@ -16,6 +16,8 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@types/body-parser": "^1.19.5",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "socket.io": "^4.8.1"
